<?xml version="1.0"?>
<package format="2">
  <name>show_radius</name>
  <version>0.0.1</version>
  <description>RViz plugin to show point cloud radius values</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  
  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>